// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 Default render 1`] = `
<div>
  <div
    class="MuiBox-root css-1r6mtiz"
  >
    <div
      class="MuiBox-root css-wxdvxx"
    >
      <img
        alt="Logo"
        src="/logo.png"
      />
    </div>
    <div
      class="MuiBox-root css-1dx8jfp"
    >
      MultiSafe
    </div>
  </div>
</div>
`;

exports[`2 Hide brand text 1`] = `
<div>
  <div
    class="MuiBox-root css-176ksq4"
  >
    <div
      class="MuiBox-root css-wxdvxx"
    >
      <img
        alt="Logo"
        src="/logo.png"
      />
    </div>
    <div
      class="MuiBox-root css-1dx8jfp"
    >
      MultiSafe
    </div>
  </div>
</div>
`;
